--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -8,6 +8,7 @@ test_task:
       - yarn --version
       - cat yarn.lock
     populate_script: yarn install
+  find_script: find .
   bootstrap_script: yarn bootstrap
   build_script: yarn build
   test_script: yarn test
