--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -5,6 +5,7 @@ test_task:
   node_modules_cache:
     folder: "**/node_modules"
     fingerprint_script:
+      - echo "Hi"
       - yarn --version
       - cat yarn.lock
     populate_script: yarn install
